patternmatching in switch